add categories function for admin
