# channel-service/internal/api/dto/request/create_category_request.go
@@ -1,0 +1,5 @@
+package request
+
+type CreateCategoryRequest struct {
+	Title string `json:"title" binding:"required"`
+}
